# multi-playground

./: .gitignore  README.md  TODO
99-problems/: README.md  main.code-workspace
99-problems/c/: linked_list.c  lint.sh  lists.c  run.sh  run_sanitize.sh  run_valgrind.sh
99-problems/chicken-scheme/: lists.scm
99-problems/clojure/: .gitignore  project.clj
99-problems/gleam/: gleam.toml
99-problems/haskell/: lists.hs
99-problems/moonbit/: README.md  moon.mod
99-problems/ocaml/: .gitignore  .ocamlinit  .ocamlinit.extra  arithmetic.ml  dune  dune-project  lists.ml  printers.ml  show.ml
99-problems/purescript/: .gitignore  spago.yaml
99-problems/racket/: lists.rkt
99-problems/rescript/: .gitignore  README.md  package-lock.json  package.json  rescript.json  vite.config.mjs
99-problems/roc/: main.roc
99-problems/ruby/: Gemfile
99-problems/rust/: Cargo.toml
99-problems/typescript/: bun.lockb  main.ts  main_test.ts  package.json
algorithms/factorize/: Factorize.hs
algorithms/fibonacci/: Main.hs
algorithms/permutations_and_combinations/: subsets.dot
aoc/2024/c/: .gitignore  CMakeLists.txt  README.md  day01.c  day06.c  day06.c.off  test.example
aoc/2024/haskell/Day06/: Day06.cabal  README.md  cabal.project.local
aoc/2024/haskell/Day06/app/: Main.hs
aoc/2024/haskell/Day06b/: Day06b.cabal
aoc/2024/haskell/Day06b/app/: Main.hs
aoc/2024/haskell/Day06c/: Day06c.cabal
aoc/2024/haskell/Day06c/v1/: Main.hs
aoc/2024/haskell/Day06c/v2/: Main.hs
aoc/2024/haskell/Day06c/v3/: Main.hs
c_ffi/: README.md
c_ffi/ada/: argon2.ads  main.adb
c_ffi/c/: main.c
c_ffi/ocaml/: main.ml
c_ffi/ocaml2/: dune-project
c_ffi/odin/: main.odin
c_ffi/python/: main.py
c_ffi/ruby/: main.rb
codingchallenges.fyi/: README.md
concurrency/Go/: go.mod  main.go
concurrency/Java/: Main.java  Main2.java
concurrency/OCaml/: dune  many_counters.ml  many_counters_eio.ml  producer_consumer.ml
data-agg/ocaml/: data.ml  dune
data-agg/ocaml/test/: README.md  data.ml  dune
db/: docker-compose.yml  init.ml  psql  psql_root
db/_init/: main.ml
db/fsharp/: Program.fs
db/ocaml/: play.ml
db/ocaml/caqti_sqlite/lib/repo/: author.ml  bibliography.ml  book.ml  customer.ml  dune  init.ml
db/purescript/: package-lock.json
fsm/ruby/: atm.md
hackerearth/dotnet_starters/: activate_dotnet10_preview.sh  main.cs  main.fsx
html-rendering/haskell/: NOTE
http_client/haskell/: httpc.cabal
http_client/java/: build.gradle.kts  settings.gradle.kts
interpret-cmd/haskell/: Main.hs
interpret-cmd/ocaml/: .ocamlformat  README.md
interpret-cmd/ocaml-simple/: README.md
koans/c/: Makefile  README.md
monads/fsharp/: monads.fsx
monads/gleam/: README.md  gleam.toml
monads/haskell/: README.md  monads.cabal
monads/haskell-v2/: 01_functor.hs  02_applicative_functors.hs  03_monads.hs  URL
monads/haskell/src/: ExploreMonads.hs  ExploreReader.hs  Monads.hs
monads/java/: Monads.java
monads/ocaml/: monads.ml
monads/ocaml/preface-playground/lib/: .ocamlinit  applicative_functors.ml  building_custom_monads.ml  dune  explore_reader.ml  functors.ml
monads/purescript/: spago.dhall
monads/reader/: Problem.hs  README.md  Solution.hs  SolutionAlt.hs  SolutionAltExplore.hs  SolutionSimple.hs
monads/typescript/: package.json
monads/vlang/: monads.v
online-judge/haskell/: ex001.hs  ex003.hs  ex004.hs  ex005.hs
online-judge/ocaml/: dune-workspace
online-judge/rust/: Cargo.toml
open.kattis/basketballoneonone/: Main.hs  main.rb  main.rs
parsers/: README.md
parsers/go/: go.mod
parsers/haskell/: parsing.cabal
parsers/haskell/app/: Main.hs
parsers/haskell/src/: MyLib.hs
parsers/ocaml/: .ocamlformat  to_export.ml
pascal-triangle/: Cargo.toml  Main.hs  main.ml  main.py  main.rs  pascal.rb
phantom-type/: URL
phantom-type/gleam/: README.md  gleam.toml
phantom-type/haskell/: authentication.hs
radix/C/: radix.c
radix/C#/: Program.cs  Radix.sln  RadixCLI.csproj
radix/Clojure/: main.clj
radix/Flix/: Main.flix
radix/Haskell/: Main.hs
radix/Java/: Main.java
radix/PureScript/: spago.dhall
radix/Python/: radix.py
radix/Rust/: Cargo.toml
radix/Scala/: build.sbt
radix/TypeScript/: deno.json  main.ts  main_test.ts
reified-effects/elm/: .gitignore  README.md  index.html  main0.html  main1.html
reified-effects/haskell/: Main0.hs  Main1.hs  Main2.hs  reified-effects.cabal
sorting/ocaml/: sorting.ml
sql-like-dsl/haskell/: orderDependent.hs  orderIndependentComplex.hs  orderIndependentSimpler.hs
sql-like-dsl/ocaml/: README.md  dune  order_dependent.ml  order_independent.ml
sql-like-dsl/racket/: sql.rkt
sse-demo/: .gitignore  README.md  sse-demo.code-workspace
sse-demo/c/: Makefile  main.c  start.sh
sse-demo/common/: client.html  package-lock.json  package.json  test-disconnection.js
sse-demo/csharp/: .gitignore  SSEServer.csproj  build.sh  server.cs  start.sh
sse-demo/elixir/: .gitignore  build.sh  mix.exs  start.sh
sse-demo/erlang/: main.erl  sse_server.erl  start.sh
sse-demo/express/: package-lock.json  package.json  server.js  start.sh
sse-demo/fsharp/: .gitignore  SSEServer.fsproj  SSEServer.sln  build.sh  server.fs  start.sh
sse-demo/gleam/: .gitignore  build.sh  gleam.toml  manifest.toml  start.sh
sse-demo/go/: go.mod  main.go  start.sh
sse-demo/haskell/: .gitignore  build.sh  server.hs  sse-server.cabal  start.sh
sse-demo/java/: .gitignore  SSEServer.java  build.sh  start.sh
sse-demo/js/: build.sh  package.json  server.js  start.sh
sse-demo/ocaml/: .gitignore  build.sh  dune  dune-project  server.ml  server2.ml  start.sh
sse-demo/ps/: .gitignore  main.js  packages.dhall  spago.dhall  start.sh
sse-demo/python/: build.sh  requirements.txt  server.py  start.sh
sse-demo/ruby/: .gitignore  Gemfile  (+3 more)
sse-demo/rust/: .gitignore  Cargo.toml  build.sh  start.sh
sse-demo/rust/src/: main.rs
tree/: README.md
web-app/haskell/hello-web-apps/: hello-web-apps.cabal
web-app/haskell/hello-web-apps/hello-happstack/: Main.hs
web-app/haskell/hello-web-apps/hello-scotty/: Main.hs
web-ui-patterns/: README.md
(+440 files in other folders)
