cabal-version:      2.4
name:               monads
version:            0.1.0.0

library
    exposed-modules:  Monads

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
