cabal-version:      2.4
name:               monads
version:            0.0.1

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.17.2.0
  ghc-options:
    -Wall

library
    import: shared-properties
    exposed-modules:  ExploreMonads

    -- Modules included in this library but not exported.
    other-modules: ExploreReader

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: mtl

    hs-source-dirs:   src
