cabal-version:      3.0
name:               parsing
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Benjamin Thomas
maintainer:         benjamin.guy.thomas@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , time
                    , parsec
                    , raw-strings-qq
    hs-source-dirs:   src
    default-language: GHC2021

executable parsing
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        parsing

    hs-source-dirs:   app
    default-language: GHC2021

test-suite parsing-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        parsing
