cabal-version:      2.4
name:               sse-server
version:            0.1.0.0
synopsis:           SSE Server with proper disconnection detection
license:            MIT
author:             SSE Demo
maintainer:         demo@example.com

executable sse-server
    main-is:          server.hs
    build-depends:    base >=4.14 && <5,
                      network >=3.1 && <4,
                      bytestring >=0.10 && <1,
                      text >=1.2 && <3,
                      time >=1.9 && <2,
                      containers >=0.6 && <1,
                      stm >=2.5 && <3,
                      aeson >=1.5 && <3,
                      async >=2.2 && <3
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N