[package]
name = "sse_server"
version = "0.1.0"
edition = "2021"
description = "SSE Server with proper disconnection detection in Rust"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
rand = "0.8"