(library
 (name data_agg)
 (inline_tests
  ; (flags (-stop-on-error))
  )
 (libraries
  core
  ; patdiff
  ; expect_test_patdiff
  expect_test_helpers_core.expect_test_helpers_base)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_assert
   ppx_deriving.ord
   ppx_deriving.eq
   ppx_sexp_conv
   ppx_jane
   ;
   )))
