cabal-version:      3.0
name:               hello-web-apps
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable hello-scotty
        import:           warnings
        default-language: Haskell2010
        hs-source-dirs:   hello-scotty
        main-is:          Main.hs
        build-depends:    base
                        , scotty
                        , wai-extra
                        , http-types
                        , text


executable hello-happstack
        import:           warnings
        default-language: Haskell2010
        hs-source-dirs:   hello-happstack
        main-is:          Main.hs
        build-depends:    base
                        , happstack-server
                        , blaze-html
                        -- , hsx2hs

