cabal-version:   3.0
name:            Day06
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall
                --  -O2
                --  -threaded
                --  -fprof-auto
                --  "-with-rtsopts=-N -p -s -h -i0.1"

executable Day06
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.1
                    , unordered-containers
